--- a/templates/openstack/cinder-csi/cinder-csi-controllerplugin.yaml
+++ b/templates/openstack/cinder-csi/cinder-csi-controllerplugin.yaml
@@ -82,7 +82,7 @@ spec:
           args:
             - /bin/cinder-csi-plugin
             - "--endpoint=unix://csi/csi.sock"
-            - "--cloud-config=/etc/config/cloud.conf"
+            - "--cloud-config=/etc/openstack/cloud.conf"
             - "--cluster=kubernetes"
             - "--v=1"
           imagePullPolicy: "IfNotPresent"
@@ -106,9 +106,7 @@ spec:
             - name: socket-dir
               mountPath: /csi
             - name: openstack-cloud-config
-              mountPath: /etc/config
-              subPath: cloud.conf
-              readOnly: true
+              mountPath: /etc/openstack
       volumes:
         - name: socket-dir
           emptyDir:
