--- a/templates/external-dns/deploy-godaddy.yaml
+++ b/templates/external-dns/deploy-godaddy.yaml
@@ -73,8 +73,8 @@ spec:
             - --domain-filter=__DOMAIN_NAME__
             - --annotation-filter=external-dns.alpha.kubernetes.io/register=true
             - --ignore-ingress-tls-spec
-            - --txt-prefix=${PLATEFORM}.
-            - --txt-owner-id=${PLATEFORM}.
+            - --txt-prefix=__PLATEFORM__.
+            - --txt-owner-id=__PLATEFORM__.
             - --provider=godaddy
             - --godaddy-api-key=__GODADDY_API_KEY__
             - --godaddy-api-secret=__GODADDY_API_SECRET__
