--- a/templates/external-dns/deploy-route53.yaml
+++ b/templates/external-dns/deploy-route53.yaml
@@ -73,8 +73,8 @@ spec:
             - --domain-filter=__DOMAIN_NAME__
             - --annotation-filter=external-dns.alpha.kubernetes.io/register=true
             - --ignore-ingress-tls-spec
-            - --txt-prefix=${PLATEFORM}..
-            - --txt-owner-id=${PLATEFORM}.
+            - --txt-prefix=__PLATEFORM__.
+            - --txt-owner-id=__PLATEFORM__.
             - --provider=aws
             - --policy=upsert-only
             - --aws-zone-type=__ZONE_TYPE__
